Working on getting a bg image to load correctly, plus spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -107,15 +107,19 @@ header nav {
   margin-top: 2rem;
   font-family: "Raleway", sans-serif;
 }
+header nav #about {
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+}
+header nav #home {
+  font-weight: 700;
+}
 header nav a {
   text-decoration: none;
+  color: black;
   font-size: 2rem;
   padding-left: 1rem;
   padding-right: 1rem;
-}
-header nav a #about {
-  border-left: 2px solid black;
-  border-right: 2px solid black;
 }
 .artists-container {
   display: flex;
@@ -124,6 +128,7 @@ header nav a #about {
   justify-content: flex-start;
 }
 .artists-container .artist {
+  margin-top: 1rem;
   margin-left: 1rem;
   margin-right: 1rem;
   font-family: "Raleway", sans-serif;
@@ -135,8 +140,44 @@ header nav a #about {
 .artists-container .artist img {
   width: 300px;
   height: 200px;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 .artists-container .artist img:hover {
   opacity: 80%;
+}
+.artists-container .artist a {
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.title-container {
+  width: 800px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.title-container p {
+  width: 50%;
+  text-align: center;
+  padding-top: 175px;
+  padding-bottom: 1rem;
+  color: gray;
+  font-family: "Raleway", sans-serif;
+  font-size: 5rem;
+}
+.title-container hr {
+  width: 100%;
+}
+.title-container button {
+  color: black;
+  background-color: #EEEEEE;
+  padding: 0.75rem 2rem 0.75rem 2rem;
+  border-radius: 0.5rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.6rem;
+  margin-bottom: 100px;
 }
