--- a/less/mixins.less
+++ b/less/mixins.less
@@ -21,10 +21,11 @@
 
 }
 
-.buttonProperties(@textColor: white, @bgColor: black, @radius: 0px){
+.buttonProperties(@textColor: white, @bgColor: black, @padding: 0px 0px 0px 0px, @radius: 0px){
 
     color: @textColor;
     background-color: @bgColor;
+    padding: @padding;
     border-radius: @radius;
 
 }
