--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,19 +10,26 @@ header {
         margin-top: 2rem;
         font-family: @font;
 
+        #about {
+
+            border-left: 2px solid black;
+            border-right: 2px solid black;
+
+        }
+
+        #home {
+
+            font-weight: 700;
+
+        }
+
         a {
 
             text-decoration: none;
+            color: black;
             font-size: 2rem;
             padding-left: 1rem;
             padding-right: 1rem;
-
-            #about {
-
-                border-left: 2px solid black;
-                border-right: 2px solid black;
-
-            }
 
         }
 
